# OpenRAG

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  commit_100.py  commit_script.py  docker-compose.deploy.yml  docker-compose.yml  generate_history.py  install.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  pages.yml  release.yml  security-scan.yml  stale.yml  test.yml
backend/: Dockerfile  README.md  alembic.ini  mkdocs.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  001_initial_schema.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/api/v1/: admin.py  api_keys.py  auth.py  billing.py  chat.py  documents.py  tenants.py  users.py  webhooks.py
backend/app/compliance/: audit_exporter.py  data_retention.py  data_subject_rights.py
backend/app/core/: circuit_breaker.py  config.py  db.py  dependencies.py  flags.py  logging.py  metrics.py  middleware.py  observability.py  rate_limit.py  security.py
backend/app/integrations/: slack.py
backend/app/llm/: client.py  metrics.py  model_manager.py  prompt_manager.py  token_counter.py
backend/app/models/: __init__.py  base.py  billing.py  chat.py  document.py  log.py  tenant.py  types.py  user.py
backend/app/rag/: bm25_serializer.py  chunking.py  citation.py  context_builder.py  embedding.py  extraction.py  generation.py  prompt_manager.py  query_understanding.py  reranking.py  retrieval.py  vector_store.py
backend/app/schemas/: api_keys.py  auth.py  users.py
backend/app/security/: prompt_guard.py
backend/app/services/: email.py  notification.py  oidc.py  quota_manager.py  saml.py  storage.py  tenant_provisioner.py
backend/app/workers/: celery_app.py  ingestion_tasks.py  scheduled_tasks.py  webhook_sender.py
backend/docs/api/: postman_collection.json
backend/docs/compliance/: dpa_template.md
backend/docs/customer/: onboarding_guide.md
backend/docs/developer/: getting_started.md
backend/docs/operations/: capacity_planning.md  cost_optimization.md  disaster_recovery.md  runbook.md  slo.md
backend/docs/security/: hardening.md  incident_response.md  pentest_checklist.md
backend/docs/testing/: performance_report_template.md  strategy.md
backend/scripts/: evaluate_rag.py  seed.py
backend/tests/integration/: conftest.py  test_api.py  test_chat_api.py  test_db_integration.py  test_document_pipeline.py  test_e2e_flow.py  test_health.py  test_multi_tenant.py
backend/tests/performance/: BENCHMARKS.md  locustfile.py  locustfile_chat.py  locustfile_ingestion.py
backend/tests/rag_evaluation/: evaluate_rag.py  golden_dataset.json
backend/tests/security/: conftest.py  test_rate_limit.py  test_security.py
backend/tests/unit/: conftest.py  test_admin.py  test_auth.py  test_auth_endpoints.py  test_billing.py  test_chunking.py  test_documents_api.py  test_embedding.py  test_generation.py  test_quota.py  test_rag.py  test_users.py  test_vector_store.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CUSTOM_MODELS.md  DEPLOYMENT.md  ENV_VARS.md  FAQ.md  GETTING_STARTED.md  MULTI_TENANT_SETUP.md  PROJECT_REPORT.md  TEST_PLAN.md  TROUBLESHOOTING.md  api-reference.md  quickstart.md
infra/: README.md
infra/backup/: README.md  postgres-cronjob.yaml  velero-schedule.yaml
scripts/: seed.py
sdk/: README.md
sdk/python/: README.md  client.py  pyproject.toml
sdk/python/src/ai_platform/: __init__.py  client.py
sdk/python/src/enterprise_rag/: __init__.py  chat.py  client.py  documents.py
sdk/python/src/openrag/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+43 files in other folders)
