[project]
name = "OpenRAG-platform"
version = "0.1.0"
description = "Multi-tenant completely on-premise RAG-based AI platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy[asyncio]>=2.0.31",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    # Task queue
    "celery>=5.4.0",
    "redis>=5.0.6",
    "asgiref>=3.8.1",
    # Vector & storage
    "qdrant-client>=1.9.1",
    "tiktoken>=0.7.0",
    "sentence-transformers>=2.6.0",
    "rank_bm25>=0.2.2",
    "minio>=7.2.7",
    # LLM
    "litellm[proxy]>=1.40.0",
    # Observability & Reliability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "langfuse>=2.36.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
    "pybreaker>=1.3.0",
    # Security & Auth
    "slowapi>=0.1.9",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "authlib>=1.3.1",
    "python3-saml>=1.16.0",
    # HTTP & SSE
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    # Document processing
    "jinja2>=3.1.4",
    "unstructured[pdf,docx,pptx]>=0.12.0",
    "langdetect>=1.0.9",
    # Billing
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.9",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "flower>=2.0.1",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "testcontainers[postgres,redis,qdrant]>=4.5.1",
    "httpx>=0.27.0",
    "locust>=2.29.0",
    "ragas>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
