[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-rag-sdk"
version = "0.1.0"
description = "Python SDK for Enterprise RAG Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
    "mypy>=1.0.0",
    "black>=24.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_platform"]
