[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrag"
version = "0.1.0"
description = "Official Python SDK for the Enterprise RAG Platform"
readme = "README.md"
authors = [
    { name = "OpenRAG Team", email = "engineering@openrag.com" }
]
urls = { Repository = "https://github.com/ardamoustafa1/OpenRAG", Homepage = "https://openrag.com" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
    "mypy>=1.0.0",
    "black>=24.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/openrag"]
